@@ -268,7 +268,7 @@
 						<input type="text" size="30" id="modify_container_arguments" class="modal_input" name="modify_container_arguments" value=""></font>
 						<br>
 						<input type="radio" name="options_radio" id="radio_modify_heartbeat">
-						<label for="radio_modify_heartbeat">Change Heartbeat Port</label>
+						<label for="radio_modify_heartbeat">Change/Set Heartbeat Port</label>
 						<input type="text" size="5" id="modify_heartbeat_port" class="modal_input" name="modify_heartbeat_port" value=""></font>
 					</div>
 				</fieldset>
